# sentinel

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INTELLIGENCE_UPGRADE_PLAN.md  README.md  ROADMAP_STRATEGY.md  pyproject.toml  test_output.txt
docs/: BLOG_POST.md  TECHNICAL_GUIDE.md  USER_GUIDE.md
examples/: basic_discovery.py  demo_todomvc.py  mutation_testing.py  shadow_dom_exploration.py  stealth_mode.py
reports/: history.sqlite  report.json
sentinel/: __init__.py
sentinel/cli/: main.py
sentinel/core/: __init__.py  driver_factory.py  goal_parser.py  orchestrator.py  system_profiler.py
sentinel/layers/: __init__.py
sentinel/layers/action/: __init__.py  executor.py  teleporter.py
sentinel/layers/intelligence/: __init__.py  decision_engine.py
sentinel/layers/intelligence/brains/: base.py  cloud_brain.py  heuristic_brain.py  local_brain.py
sentinel/layers/sense/: __init__.py  dom_mapper.py  visual_agent.py  visual_analyzer.py
sentinel/layers/validation/: __init__.py  mutator.py
sentinel/reporters/: __init__.py  flight_recorder.py  session_replayer.py
tests/integration/: test_v030_bugfixes.py  test_v040_multi_step.py  test_v041_dhirajdas_multi_step.py  test_v050_verification_loop.py
tests/unit/: test_executor_healing.py  test_goal_parser.py  test_intelligence.py  test_visual_agent.py
